--- a/trunk/frontend/html/include/css/forms/worldclass/worldclassApp.css
+++ b/trunk/frontend/html/include/css/forms/worldclass/worldclassApp.css
@@ -97,9 +97,9 @@ body {
   overflow: scroll; }
   .worldclass .leaderboard .division {
     width: 1000px;
-    height: 680px;
-    margin: 20px auto 20px auto; }
+    height: 720px; }
     .worldclass .leaderboard .division .standings {
+      position: relative;
       height: 680px;
       color: #999;
       font-size: 24pt;
@@ -107,8 +107,7 @@ body {
       /* W3C */
       border: 4px solid white;
       border-radius: 24px;
-      padding: 0 32px 8px 32px;
-      margin: 0 auto 0 auto; }
+      padding: 0 32px 8px 32px; }
       .worldclass .leaderboard .division .standings .rank1 {
         color: #f90; }
       .worldclass .leaderboard .division .standings .rank2 {
@@ -118,17 +117,29 @@ body {
       .worldclass .leaderboard .division .standings .rank4 {
         color: #930; }
       .worldclass .leaderboard .division .standings .athlete {
-        clear: both; }
+        position: relative; }
         .worldclass .leaderboard .division .standings .athlete .name {
-          float: left;
+          position: absolute;
+          left: 0;
           width: 70%;
           font-weight: bold; }
         .worldclass .leaderboard .division .standings .athlete .score {
-          float: left;
+          position: absolute;
+          left: 70%;
           width: 20%; }
         .worldclass .leaderboard .division .standings .athlete .medal {
-          float: left;
+          position: absolute;
+          left: 90%;
           width: 10%; }
+      .worldclass .leaderboard .division .standings .notes {
+        font-size: 14pt;
+        position: relative;
+        color: white;
+        background: black;
+        border: 2px solid white;
+        border-radius: 8px;
+        padding: 8px;
+        opacity: 0.5; }
     .worldclass .leaderboard .division .pending {
       height: 680px;
       color: #999;
@@ -143,18 +154,21 @@ body {
       .worldclass .leaderboard .division .pending ol li b {
         color: #ccc;
         font-weight: bold; }
-    .worldclass .leaderboard .division .hidden {
-      display: none; }
     .worldclass .leaderboard .division .one-column {
-      width: 900px;
-      margin: 0 auto 0 auto; }
+      width: 900px; }
     .worldclass .leaderboard .division .two-column {
-      width: 400px;
-      margin: 0 10px 0 10px;
-      left: 0;
-      float: left; }
+      top: 0;
+      width: 400px; }
       .worldclass .leaderboard .division .two-column h1 {
         font-size: 28pt; }
+    .worldclass .leaderboard .division .left-column {
+      position: absolute;
+      top: 0;
+      left: 0; }
+    .worldclass .leaderboard .division .right-column {
+      position: absolute;
+      top: 0;
+      left: 500px; }
 
 .usermessage {
   font-family: Optima;
